--- a/reflect/CMakeLists.txt
+++ b/reflect/CMakeLists.txt
@@ -4,4 +4,8 @@ project(reflect)
 set(CMAKE_CXX_STANDARD 23)
 
 # C++ 反射系统演示
-add_executable(reflect main.cpp reflect.h)
+add_executable(reflect main.cpp reflect.h
+        )
+
+add_executable(example example.cpp reflect.h)
+
