--- a/reflect/CMakeLists.txt
+++ b/reflect/CMakeLists.txt
@@ -7,5 +7,9 @@ set(CMAKE_CXX_STANDARD 23)
 add_executable(reflect main.cpp reflect.h
         )
 
-add_executable(example example.cpp reflect.h)
+add_executable(example example.cpp reflect.h
+        )
+
+add_executable(json_show json_show.cpp reflect.h)
+target_link_libraries(json_show simdjson)
 
